--- a/xbmc/lib/libjsonrpc/Makefile.in
+++ b/xbmc/lib/libjsonrpc/Makefile.in
@@ -1,6 +1,6 @@
 INCLUDES=-I. -I../ -I../../ -I../../../ -I../../utils -I../../FileSystem -I../../linux -I../../cores -I../../../guilib
 
-SRCS=JSONRPC.cpp PlayerActions.cpp FileActions.cpp MusicLibrary.cpp VideoLibrary.cpp LibraryBase.cpp TCPServer.cpp
+SRCS=JSONRPC.cpp PlayerActions.cpp FileActions.cpp MusicLibrary.cpp VideoLibrary.cpp LibraryBase.cpp SystemOperations.cpp XBMCOperations.cpp TCPServer.cpp
 
 LIB= libjsonrpc.a
 
