--- a/xbmc/cores/VideoRenderers/VideoShaders/Makefile
+++ b/xbmc/cores/VideoRenderers/VideoShaders/Makefile
@@ -1,5 +1,5 @@
 INCLUDES=-I. -I.. -I../../ -I../../../ -I../../../linux -I../../../../guilib
-SRCS=YUV2RGBShader.cpp VideoFilterShader.cpp
+SRCS=YUV2RGBShader.cpp VideoFilterShader.cpp ConvolutionKernels.cpp
 
 LIB=VideoShaders.a
 
