--- a/configure.in
+++ b/configure.in
@@ -1054,6 +1054,7 @@ OUTPUT_FILES="Makefile \
              xbmc/lib/libUPnP/Makefile \
              xbmc/DllPaths_generated.h \
              xbmc/linux/Makefile \
+             xbmc/FileSystem/Makefile \
              xbmc/screensavers/Makefile \
              xbmc/screensavers/rsxs-0.9/xbmc/Makefile \
              xbmc/visualizations/XBMCProjectM/Makefile \
