--- a/guilib/Makefile
+++ b/guilib/Makefile
@@ -43,6 +43,7 @@ SRCS=AnimatedGif.cpp \
      GUISpinControl.cpp \
      GUISpinControlEx.cpp \
      GUIStandardWindow.cpp \
+     GUIStaticItem.cpp \
      GUITextBox.cpp \
      GUITexture.cpp \
      GUITextureGL.cpp \
