--- a/project/VS2008Express/guilib.vcproj
+++ b/project/VS2008Express/guilib.vcproj
@@ -522,6 +522,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\guilib\GUIStaticItem.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\guilib\GUITextBox.cpp"
 				>
 			</File>
@@ -917,6 +921,10 @@
 			</File>
 			<File
 				RelativePath="..\..\guilib\GUIStandardWindow.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\guilib\GUIStaticItem.h"
 				>
 			</File>
 			<File
