--- a/xbmc/FileSystem/Makefile.in
+++ b/xbmc/FileSystem/Makefile.in
@@ -42,6 +42,7 @@ SRCS=ASAPFileDirectory.cpp \
      FileSpecialProtocol.cpp \
      FileSmb.cpp \
      FileTuxBox.cpp \
+     FileXBMSP.cpp \
      FileZip.cpp \
      FTPDirectory.cpp \
      FTPParse.cpp \
@@ -85,6 +86,7 @@ SRCS=ASAPFileDirectory.cpp \
      VTPDirectory.cpp \
      VTPSession.cpp \
      VTPFile.cpp \
+     XBMSDirectory.cpp \
      ZeroconfDirectory.cpp \
      ZipDirectory.cpp \
      ZipManager.cpp
