--- a/lib/pcre/libpcre/libpcre.vcproj
+++ b/lib/pcre/libpcre/libpcre.vcproj
@@ -235,6 +235,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\pcrecpp.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\pcreposix.c"
 				>
 			</File>
