--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -868,11 +868,11 @@
 						Name="Video"
 						>
 						<File
-							RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD.cpp"
+							RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\CrystalHD.cpp"
 							>
 						</File>
 						<File
-							RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD.h"
+							RelativePath="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD\CrystalHD.h"
 							>
 						</File>
 						<File
@@ -1386,14 +1386,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\xbmc\cores\paplayer\APEcodec.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\cores\paplayer\APEcodec.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\xbmc\cores\paplayer\ASAPCodec.cpp"
 					>
 				</File>
@@ -1538,11 +1530,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\xbmc\cores\paplayer\ModuleCodec.cpp"
+					RelativePath="..\..\xbmc\cores\paplayer\ModplugCodec.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\xbmc\cores\paplayer\ModuleCodec.h"
+					RelativePath="..\..\xbmc\cores\paplayer\ModplugCodec.h"
 					>
 				</File>
 				<File
@@ -1595,14 +1587,6 @@
 				</File>
 				<File
 					RelativePath="..\..\xbmc\cores\paplayer\RingHoldBuffer.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\cores\paplayer\SHNcodec.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\xbmc\cores\paplayer\SHNcodec.h"
 					>
 				</File>
 				<File
@@ -3127,6 +3111,14 @@
 				</File>
 				<File
 					RelativePath="..\..\xbmc\utils\RegExp.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\utils\RingBuffer.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\utils\RingBuffer.h"
 					>
 				</File>
 				<File
