--- a/xbmc/cores/dvdplayer/DVDDemuxers/Makefile.in
+++ b/xbmc/cores/dvdplayer/DVDDemuxers/Makefile.in
@@ -11,6 +11,7 @@ SRCS=	DVDDemux.cpp \
 	DVDFactoryDemuxer.cpp \
 	DVDDemuxVobsub.cpp \
 	DVDDemuxHTSP.cpp \
+	DVDDemuxPVRClient.cpp \
 
 LIB=	DVDDemuxers.a
 
