[DSPlayer] some refactoring of filters loading
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@31298 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2010Express/XBMC.vcxproj
+++ b/project/VS2010Express/XBMC.vcxproj
@@ -1910,8 +1910,12 @@
     <ClInclude Include="..\..\xbmc\lib\libjsonrpc\XBMCOperations.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\system\players\dsplayer\filtersconfig.xml" />
-    <None Include="..\..\system\players\dsplayer\mediasconfig.xml" />
+    <None Include="..\..\system\players\dsplayer\filtersconfig.xml">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="..\..\system\players\dsplayer\mediasconfig.xml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="..\..\xbmc\win32\XBMC.ico" />
   </ItemGroup>
   <ItemGroup>
