--- a/xbmc/cores/DSPlayer/Subtitles/dsutil/dsutil.vcproj
+++ b/xbmc/cores/DSPlayer/Subtitles/dsutil/dsutil.vcproj
@@ -45,9 +45,11 @@
 				AdditionalOptions="/MP"
 				AdditionalIncludeDirectories="..\..\..\..\;..\..\..\..\..\guilib;..\..\..\..\win32;..\..\include;..\..\baseclasses;..\..\..\..\lib\boost;..\..\DshowUtil/;..\..\"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
+				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				EnableEnhancedInstructionSet="2"
 				UsePrecompiledHeader="2"
+				DebugInformationFormat="4"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
