[DSPlayer] merged from trunk revs r31243:31309 (part 2)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@31311 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/addons/skin.confluence/media/Makefile
+++ b/addons/skin.confluence/media/Makefile
@@ -92,7 +92,6 @@ IMAGES= \
 	DefaultRecentlyAddedEpisodes.png \
 	DefaultRecentlyAddedMovies.png \
 	DefaultRecentlyAddedMusicVideos.png \
-	DefaultScript.png \
 	DefaultTVShows.png \
 	DefaultVideo.png \
 	DefaultVideoCover.png \
@@ -137,6 +136,7 @@ IMAGES= \
 	flagging/audio/mp3.png \
 	flagging/audio/ogg.png \
 	flagging/audio/truehd.png \
+	flagging/audio/wavpack.png \
 	flagging/audio/wma.png \
 	flagging/audio/wmapro.png \
 	flagging/audio/wmav2.png \
