--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -127,6 +127,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -221,6 +222,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -3701,6 +3703,14 @@
 				</File>
 				<File
 					RelativePath="..\..\xbmc\utils\PCMAmplifier.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\utils\PerformanceSample.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\utils\PerformanceStats.cpp"
 					>
 				</File>
 				<File
