[WIN32] build python core with a fix base address as the original source
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31387 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/lib/libPython/Python/PCbuild/pythoncore.vcproj
+++ b/xbmc/lib/libPython/Python/PCbuild/pythoncore.vcproj
@@ -87,8 +87,8 @@
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)python24.pdb"
 				SubSystem="2"
-				BaseAddress=""
-				RandomizedBaseAddress="2"
+				BaseAddress="0x1e000000"
+				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)python24.lib"
 				TargetMachine="1"
